// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerPage renders the given options as rows 1`] = `
<Screen
  drawUnderNavBar={true}
  navBarButtonColor="#008EE2"
  navBarStyle="light"
  navBarTitleColors="#2D3B45"
  showDismissButton={true}
  statusBarStyle="default"
  title="Pick Something"
>
  <FlatList
    data={
      Array [
        "a",
        "b",
        "c",
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    renderItem={[Function]}
    scrollEventThrottle={50}
    style={
      Object {
        "backgroundColor": "#f5f5f5",
      }
    }
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</Screen>
`;

exports[`a 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  activeOpacity={0.85}
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  underlayColor="black"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 0,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "fontWeight": "600",
            },
            Object {
              "fontWeight": "normal",
            },
          ]
        }
      >
        First One
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`b 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
      "selected",
    ]
  }
  activeOpacity={0.85}
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  underlayColor="black"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 0,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "fontWeight": "600",
            },
            Object {
              "fontWeight": "normal",
            },
          ]
        }
      >
        Second One
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "flex-end",
          }
        }
      >
        <Image
          source={
            Object {
              "testUri": "../../../src/images/check-white.png",
            }
          }
          style={
            Object {
              "height": 20,
              "marginLeft": 16,
              "resizeMode": "contain",
              "tintColor": "#00AC18",
              "width": 20,
            }
          }
        />
      </View>
    </View>
  </View>
</TouchableHighlight>
`;

exports[`c 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  activeOpacity={0.85}
  onPress={[Function]}
  style={
    Array [
      undefined,
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
    ]
  }
  underlayColor="black"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "flex": 1,
          "flexDirection": "row",
          "minHeight": 54,
          "paddingBottom": 12,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 12,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
          Object {
            "marginLeft": 0,
          },
        ]
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={0}
        style={
          Array [
            Object {
              "fontWeight": "600",
            },
            Object {
              "fontWeight": "normal",
            },
          ]
        }
      >
        Third One
      </Text>
    </View>
  </View>
</TouchableHighlight>
`;
